update FS-2.0 paper (version re-submitted to CPC, commit 1d558aec475d)

--- a/doc/flexiblesusy-2.0.bib
+++ b/doc/flexiblesusy-2.0.bib
@@ -779,6 +779,21 @@
       SLACcitation   = "%%CITATION = ARXIV:1407.4336;%%"
 }
 
+@article{Martin:2003qz,
+      author         = "Martin, Stephen P.",
+      title          = "{Evaluation of two loop selfenergy basis integrals using
+                        differential equations}",
+      journal        = "Phys. Rev.",
+      volume         = "D68",
+      year           = "2003",
+      pages          = "075002",
+      doi            = "10.1103/PhysRevD.68.075002",
+      eprint         = "hep-ph/0307101",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-03-202-T",
+      SLACcitation   = "%%CITATION = HEP-PH/0307101;%%"
+}
 
 
 @article{Degrassi:2012ry,
@@ -3813,8 +3828,8 @@ archivePrefix = "arXiv",
 }
 
 @misc{himalaya,
-      howpublished   = {\url{https://github.com/jklappert/Himalaya}},
-      note           = {Accessed: 2017-08-19}
+      howpublished   = {\url{https://github.com/Himalaya-Library/Himalaya}},
+      note           = {Accessed: 2017-10-17}
 }
 
 @article{Rodrigo:1993hc,
@@ -3922,4 +3937,294 @@ archivePrefix = "arXiv",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1003.5820;%%"
+}
+
+@article{Fleischer:1993ub,
+      author         = "Fleischer, J. and Tarasov, O. V. and Jegerlehner, F.",
+      title          = "{Two loop heavy top corrections to the rho parameter: A
+                        Simple formula valid for arbitrary Higgs mass}",
+      journal        = "Phys. Lett.",
+      volume         = "B319",
+      year           = "1993",
+      pages          = "249-256",
+      doi            = "10.1016/0370-2693(93)90810-5",
+      reportNumber   = "BI-TP-93-24, PSI-PR-93-14",
+      SLACcitation   = "%%CITATION = PHLTA,B319,249;%%"
+}
+
+@article{Wess:1973kz,
+      author         = "Wess, J. and Zumino, B.",
+      title          = "{A Lagrangian Model Invariant Under Supergauge
+                         Transformations}",
+      journal        = "Phys. Lett.",
+      volume         = "49B",
+      year           = "1974",
+      pages          = "52",
+      doi            = "10.1016/0370-2693(74)90578-4",
+      reportNumber   = "CERN-TH-1794",
+      SLACcitation   = "%%CITATION = PHLTA,49B,52;%%"
+}
+
+@article{Wess:1974tw,
+      author         = "Wess, J. and Zumino, B.",
+      title          = "{Supergauge Transformations in Four-Dimensions}",
+      journal        = "Nucl. Phys.",
+      volume         = "B70",
+      year           = "1974",
+      pages          = "39-50",
+      doi            = "10.1016/0550-3213(74)90355-1",
+      SLACcitation   = "%%CITATION = NUPHA,B70,39;%%"
+}
+
+@article{Salam:1974yz,
+      author         = "Salam, Abdus and Strathdee, J. A.",
+      title          = "{Supergauge Transformations}",
+      journal        = "Nucl. Phys.",
+      volume         = "B76",
+      year           = "1974",
+      pages          = "477-482",
+      doi            = "10.1016/0550-3213(74)90537-9",
+      reportNumber   = "IC/74/11",
+      SLACcitation   = "%%CITATION = NUPHA,B76,477;%%"
+}
+
+HLS and CM theorem:
+
+@article{Coleman:1967ad,
+      author         = "Coleman, Sidney R. and Mandula, J.",
+      title          = "{All Possible Symmetries of the S Matrix}",
+      journal        = "Phys. Rev.",
+      volume         = "159",
+      year           = "1967",
+      pages          = "1251-1256",
+      doi            = "10.1103/PhysRev.159.1251",
+      SLACcitation   = "%%CITATION = PHRVA,159,1251;%%"
+}
+
+@article{Haag:1974qh,
+      author         = "Haag, Rudolf and {\L}opusza\'{n}ski, Jan T. and
+                        Sohnius, Martin",
+      title          = "{All Possible Generators of Supersymmetries of the S
+                         Matrix}",
+      journal        = "Nucl. Phys.",
+      volume         = "B88",
+      year           = "1975",
+      pages          = "257",
+      doi            = "10.1016/0550-3213(75)90279-5",
+      reportNumber   = "Print-74-1630 (KARLSRUHE)",
+      SLACcitation   = "%%CITATION = NUPHA,B88,257;%%"
+}
+
+%% SplitSUSY refs
+
+@inproceedings{Wells:2003tf,
+      author         = "Wells, James D.",
+      title          = "{Implications of supersymmetry breaking with a little
+                        hierarchy between gauginos and scalars}",
+      booktitle      = "{11th International Conference on Supersymmetry and the
+                        Unification of Fundamental Interactions (SUSY 2003)
+                        Tucson, Arizona, June 5-10, 2003}",
+      year           = "2003",
+      eprint         = "hep-ph/0306127",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MCTP-03-30",
+      SLACcitation   = "%%CITATION = HEP-PH/0306127;%%"
+}
+
+
+@article{Giudice:2004tc,
+      author         = "Giudice, G. F. and Romanino, A.",
+      title          = "{Split supersymmetry}",
+      journal        = "Nucl. Phys.",
+      volume         = "B699",
+      year           = "2004",
+      pages          = "65-89",
+      doi            = "10.1016/j.nuclphysb.2004.11.048,
+                        10.1016/j.nuclphysb.2004.08.001",
+      note           = "[Erratum: Nucl. Phys.B706,487(2005)]",
+      eprint         = "hep-ph/0406088",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2004-100",
+      SLACcitation   = "%%CITATION = HEP-PH/0406088;%%"
+}
+
+
+@article{ArkaniHamed:2004fb,
+      author         = "Arkani-Hamed, Nima and Dimopoulos, Savas",
+      title          = "{Supersymmetric unification without low energy
+                        supersymmetry and signatures for fine-tuning at the LHC}",
+      journal        = "JHEP",
+      volume         = "06",
+      year           = "2005",
+      pages          = "073",
+      doi            = "10.1088/1126-6708/2005/06/073",
+      eprint         = "hep-th/0405159",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = HEP-TH/0405159;%%"
+}
+
+%% more SUSY refs
+@article{Miyazawa:1966mfa,
+      author         = "Miyazawa, H.",
+      title          = "{Baryon Number Changing Currents}",
+      journal        = "Prog. Theor. Phys.",
+      volume         = "36",
+      year           = "1966",
+      number         = "6",
+      pages          = "1266-1276",
+      doi            = "10.1143/PTP.36.1266",
+      SLACcitation   = "%%CITATION = PTPKA,36,1266;%%"
+}
+
+@article{Miyazawa:1968zz,
+      author         = "Miyazawa, Hironari",
+      title          = "{Spinor Currents and Symmetries of Baryons and Mesons}",
+      journal        = "Phys. Rev.",
+      volume         = "170",
+      year           = "1968",
+      pages          = "1586-1590",
+      doi            = "10.1103/PhysRev.170.1586",
+      SLACcitation   = "%%CITATION = PHRVA,170,1586;%%"
+}
+
+
+
+@article{Ramond:1971gb,
+      author         = "Ramond, Pierre",
+      title          = "{Dual Theory for Free Fermions}",
+      journal        = "Phys. Rev.",
+      volume         = "D3",
+      year           = "1971",
+      pages          = "2415-2418",
+      doi            = "10.1103/PhysRevD.3.2415",
+      reportNumber   = "FERMILAB-PUB-70-008-T, FERMILAB-PUB-70-008-THY, THY-8",
+      SLACcitation   = "%%CITATION = PHRVA,D3,2415;%%"
+}
+
+@article{Golfand:1971iw,
+      author         = "Golfand, {\relax Yu}. A. and Likhtman, E. P.",
+      title          = "{Extension of the Algebra of Poincare Group Generators
+                        and Violation of p Invariance}",
+      journal        = "JETP Lett.",
+      volume         = "13",
+      year           = "1971",
+      pages          = "323-326",
+      note           = "[Pisma Zh. Eksp. Teor. Fiz.13,452(1971)]",
+      SLACcitation   = "%%CITATION = JTPLA,13,323;%%"
+}
+
+@article{Gervais:1971ji,
+      author         = "Gervais, Jean-Loup and Sakita, B.",
+      title          = "{Field Theory Interpretation of Supergauges in Dual
+                        Models}",
+      journal        = "Nucl. Phys.",
+      volume         = "B34",
+      year           = "1971",
+      pages          = "632-639",
+      doi            = "10.1016/0550-3213(71)90351-8",
+      SLACcitation   = "%%CITATION = NUPHA,B34,632;%%"
+}
+
+@article{Neveu:1971rx,
+      author         = "Neveu, A. and Schwarz, J. H.",
+      title          = "{Factorizable dual model of pions}",
+      journal        = "Nucl. Phys.",
+      volume         = "B31",
+      year           = "1971",
+      pages          = "86-112",
+      doi            = "10.1016/0550-3213(71)90448-2",
+      SLACcitation   = "%%CITATION = NUPHA,B31,86;%%"
+}
+
+@article{Neveu:1971iv,
+      author         = "Neveu, A. and Schwarz, J. H.",
+      title          = "{Quark Model of Dual Pions}",
+      journal        = "Phys. Rev.",
+      volume         = "D4",
+      year           = "1971",
+      pages          = "1109-1111",
+      doi            = "10.1103/PhysRevD.4.1109",
+      SLACcitation   = "%%CITATION = PHRVA,D4,1109;%%"
+}
+
+@article{Volkov:1973ix,
+      author         = "Volkov, D. V. and Akulov, V. P.",
+      title          = "{Is the Neutrino a Goldstone Particle?}",
+      journal        = "Phys. Lett.",
+      volume         = "46B",
+      year           = "1973",
+      pages          = "109-110",
+      doi            = "10.1016/0370-2693(73)90490-5",
+      SLACcitation   = "%%CITATION = PHLTA,46B,109;%%"
+}
+
+%%% susy solution to HP
+
+@article{Dimopoulos:1981au,
+      author         = "Dimopoulos, Savas and Raby, Stuart",
+      title          = "{Supercolor}",
+      journal        = "Nucl. Phys.",
+      volume         = "B192",
+      year           = "1981",
+      pages          = "353-368",
+      doi            = "10.1016/0550-3213(81)90430-2",
+      reportNumber   = "SLAC-PUB-2719, Print-81-0215 (ITP,STANFORD),
+                        NSF-ITP-81-24",
+      SLACcitation   = "%%CITATION = NUPHA,B192,353;%%"
+}
+
+@article{Witten:1981nf,
+      author         = "Witten, Edward",
+      title          = "{Dynamical Breaking of Supersymmetry}",
+      journal        = "Nucl. Phys.",
+      volume         = "B188",
+      year           = "1981",
+      pages          = "513",
+      doi            = "10.1016/0550-3213(81)90006-7",
+      reportNumber   = "Print-81-0317 (PRINCETON)",
+      SLACcitation   = "%%CITATION = NUPHA,B188,513;%%"
+}
+
+@article{Dine:1981za,
+      author         = "Dine, Michael and Fischler, Willy and Srednicki, Mark",
+      title          = "{Supersymmetric Technicolor}",
+      booktitle      = "{GRAND UNIFICATION. PROCEEDINGS, 2ND WORKSHOP, ANN ARBOR,
+                        USA, APRIL 24-26, 1981}",
+      journal        = "Nucl. Phys.",
+      volume         = "B189",
+      year           = "1981",
+      pages          = "575-593",
+      doi            = "10.1016/0550-3213(81)90582-4",
+      reportNumber   = "PRINT-81-0278 (IAS,PRINCETON)",
+      SLACcitation   = "%%CITATION = NUPHA,B189,575;%%"
+}
+
+
+@article{Dimopoulos:1981zb,
+      author         = "Dimopoulos, Savas and Georgi, Howard",
+      title          = "{Softly Broken Supersymmetry and SU(5)}",
+      journal        = "Nucl. Phys.",
+      volume         = "B193",
+      year           = "1981",
+      pages          = "150-162",
+      doi            = "10.1016/0550-3213(81)90522-8",
+      reportNumber   = "HUTP-81/A022",
+      SLACcitation   = "%%CITATION = NUPHA,B193,150;%%"
+}
+
+@article{Kaul:1981hi,
+      author         = "Kaul, Romesh K. and Majumdar, Parthasarathi",
+      title          = "{Cancellation of Quadratically Divergent Mass Corrections
+                        in Globally Supersymmetric Spontaneously Broken Gauge
+                        Theories}",
+      journal        = "Nucl. Phys.",
+      volume         = "B199",
+      year           = "1982",
+      pages          = "36",
+      doi            = "10.1016/0550-3213(82)90565-X",
+      reportNumber   = "TIFR/TH/81-34",
+      SLACcitation   = "%%CITATION = NUPHA,B199,36;%%"
 }
